<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialog.newGameDialog">

    <TextView
        android:id="@+id/anchorTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_names"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/button_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_1"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/anchorTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textField2"
        app:layout_constraintBottom_toTopOf="@id/textField3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_2"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/anchorTop"
        app:layout_constraintLeft_toRightOf="@id/textField1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField4">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_3"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textField4"
        app:layout_constraintBottom_toTopOf="@id/textField5">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player3Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_4"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField2"
        app:layout_constraintLeft_toRightOf="@id/textField3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField6">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player4Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField5"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_5"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textField6"
        app:layout_constraintBottom_toTopOf="@id/textField7">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player5Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_6"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField4"
        app:layout_constraintLeft_toRightOf="@id/textField5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField8">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player6Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField7"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_7"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textField8"
        app:layout_constraintBottom_toTopOf="@id/submitPlayers">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player7Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField8"
        android:layout_width="@dimen/textFieldWidth"
        android:layout_height="wrap_content"
        android:hint="@string/player_8"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@id/textField6"
        app:layout_constraintLeft_toRightOf="@id/textField7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submitPlayers">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player8Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField7"
        android:text="Submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>